<?xml version="1.0"?>
<package>
  <name>velo_filter</name>
  <version>0.0.0</version>
  <description>The velo_filter package</description>


  <maintainer email="maniac@todo.todo">maniac</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
</package>
